# SchooGL

./: CMakeLists.txt  FindGLUT.cmake  FindMySQL.cmake  README.md  SetupDeps.cmake
SchooGLDoc/: .#Tasks.xls.1.25  Concept Doc.doc  Concept Doc.odt  Tasks.xls  TestPlannerTracker.xls  problem statment.odt  requirements.doc
SchooGLWeb/: correct.html  incorrect.html  index.php  testphp.php
SchooGLWeb/admin/: addAdmin.php  addTeacher.php  index.php
SchooGLWeb/student/: Profile.php  Students.php  index.php  stats.php
SchooGLWeb/teacher/: Questions.php  Score.php  Students.php  Threshold.php  Threshold.txt  addQuestion.php  addStudent.php  index.php
app/: CMakeLists.txt  SchooGLExe.cpp
src/: Animation.cpp  Animation.h  BBox.cpp  BBox.h  BattleScene.cpp  BattleScene.h  BattleWindow.cpp  BattleWindow.h  CMakeLists.txt  CacheSystem.cpp  CacheSystem.h  Clickable.h  Color.cpp  Color.h  ColorRectangle.cpp  Difficulty.h  DifficultyWindow.cpp  DifficultyWindow.h  InputBox.cpp  InputBox.h  LoginManager.cpp  LoginManager.h  LoginScene.cpp  LoginScene.h  Point.cpp  Point.h  PrintManager.cpp  PrintManager.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileWindow.cpp  ProfileWindow.h  Question.cpp  Question.h  QuestionManager.cpp  QuestionManager.h  QuizScene.cpp  QuizScene.h  (+28 more)
test/: CMakeLists.txt  ColorTest.cpp  LoginManagerTest.cpp  PointTest.cpp  ProfileTest.cpp  UserManagerTest.cpp
tutorial/: CMakeLists.txt  lesson4.cpp  sandbox.cpp
