SET(src
Clickable.h
Point.h
Point.cpp
Vector.h
Vector.cpp
Color.h
Color.cpp
InputBox.h
InputBox.cpp
LoginManager.h
LoginManager.cpp
Scene.h
Scene.cpp
LoginScene.h
LoginScene.cpp
Question.h
Question.cpp
BBox.h
BBox.cpp
Util.h
Util.cpp
PrintManager.h
PrintManager.cpp
StatWindow.h
StatWindow.cpp
BattleWindow.h
BattleWindow.cpp
QuestionManager.h
QuestionManager.cpp
StatScene.h
StatScene.cpp
Rectangle1.h
Rectangle1.cpp
QuizScene.h
QuizScene.cpp
SubjectWindow.h
SubjectWindow.cpp
DifficultyWindow.h
DifficultyWindow.cpp
SelectionScene.h
SelectionScene.cpp
StatManager.h
StatManager.cpp
UserManager.h
UserManager.cpp
ProfileWindow.h
ProfileWindow.cpp
Profile.h
Profile.cpp
ProfileManager.h
ProfileManager.cpp
Teacher.h
Teacher.cpp
TeacherManager.h
TeacherManager.cpp
Animation.h
Animation.cpp
CacheSystem.h
CacheSystem.cpp
Transition.h
Transition.cpp)

ADD_LIBRARY(SchooGLSrc STATIC ${src})